Header and Animation

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <h2 id="menu-id" class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
-            use biodegradable<br />
-            cups. All teas from our collection are $2/cup.
+            use biodegradable cups. All teas from our collection are
+            $2/cup.
           </p>
           <ul class="menu__cards">
             <li class="card">
@@ -236,17 +236,15 @@
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Triple Peaks Library. It
-              features 6<span> tables and free WiFi.</span>
+              features 6 tables and free WiFi.
             </p>
             <p class="about__paragraph">
               Our main mission is keeping guests cozy and energized.
             </p>
             <p class="about__paragraph">
-              Besides that, we try to reduce our environmental impact — so
-              we<span>
-                don't sell single-use cups. But you can buy one of our reusable
-                cups!</span
-              >
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
             </p>
           </div>
           <div class="about__circle"></div>
