--- a/index.html
+++ b/index.html
@@ -158,12 +158,11 @@
           <h2 id="menu-id" class="menu__title">Menu</h2>
           <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
-            use biodegradable cups. All teas from our collection are
-            $2/cup.
+            use biodegradable cups. All teas from our collection are $2/cup.
           </p>
           <ul class="menu__cards">
             <li class="card">
-              <h3 class="card-title">Filter</h3>
+              <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Regular (12 oz)<span class="card__list-divider"></span>$1
