--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </ul>
             </li>
             <li class="card">
-              <h3 class="card-title">Espresso</h3>
+              <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Macchiato<span class="card__list-divider"></span>$2.25
@@ -206,7 +206,7 @@
               </ul>
             </li>
             <li class="card">
-              <h3 class="card-title">Baked Goods</h3>
+              <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list">
                 <li class="card__list-item">
                   Almond Croissant<span class="card__list-divider"></span>$2
